fix the content vertical spilling by making app-container's position absolute

--- a/Reddit client/my-app/src/App.css
+++ b/Reddit client/my-app/src/App.css
@@ -12,6 +12,7 @@
 .App-container{
   display: flex;
   flex-direction: column;
+  position: absolute;
 }
 
 
